--- a/All-Topics/CSS/Shadows/text-shadow.css
+++ b/All-Topics/CSS/Shadows/text-shadow.css
@@ -6,7 +6,7 @@ h1 {
 }
 
 .boxShadow {
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
     width: 200px;;
     height: 200px;;
     box-shadow: 10px 10px 15px green, 15px 15px 15px yellow;
