--- a/All-Topics/CSS/Gradients/Gradients.css
+++ b/All-Topics/CSS/Gradients/Gradients.css
@@ -27,14 +27,14 @@
     width: 200px;
     height: 400px;
     background-image: radial-gradient(circle, red, blue, green);
-    /* background-image: radial-gradient(red 5%, blue 10%, green 50%); */
+    background-image: radial-gradient(red 5%, blue 10%, green 50%);
 }
 
 
 /* <!-- conic gradient  --> */
 
 .myBox {
-    margin-top: 50px;
+    /* margin-top: 50px; */
     border: 1px solid black;
     width: 200px;
     height: 250px;
