--- a/All-Topics/CSS/Gradients/Gradients.css
+++ b/All-Topics/CSS/Gradients/Gradients.css
@@ -34,7 +34,7 @@
 /* <!-- conic gradient  --> */
 
 .myBox {
-    /* margin-top: 50px; */
+    margin-top: 50px;
     border: 1px solid black;
     width: 200px;
     height: 250px;
