--- a/All-Topics/CSS/Gradients/flag/flag.css
+++ b/All-Topics/CSS/Gradients/flag/flag.css
@@ -3,7 +3,7 @@
     width: 200px;
     height: 100px;
 
-    background-image: linear-gradient(orange, white, green);
+    /* background-image: linear-gradient(orange, white, green); */
 }
 
 .line {
