--- a/All-Topics/CSS/Gradients/flag/flag.css
+++ b/All-Topics/CSS/Gradients/flag/flag.css
@@ -1,7 +1,7 @@
 .flagO {
     /* border: 1px solid black; */
-    width: 200px;
-    /* height: 100px; */
+    /* width: 200px; */
+    height: 100px;
 
     background-image: linear-gradient(orange, white, green);
 }
