--- a/All-Topics/CSS/Gradients/flag/flag.css
+++ b/All-Topics/CSS/Gradients/flag/flag.css
@@ -7,6 +7,6 @@
 }
 
 .line {
-    /* height: 400px; */
-    border-left: 2px solid black;
+    height: 400px;
+    /* border-left: 2px solid black; */
 }
