--- a/All-Topics/CSS/Transitions/Transitions.css
+++ b/All-Topics/CSS/Transitions/Transitions.css
@@ -3,7 +3,7 @@
     width: 500px;
     background-color: green;
     border: 3px solid red;
-    display: flex;
+    /* display: flex; */
 }
 
 .box {
