--- a/All-Topics/CSS/Transitions/Transitions.css
+++ b/All-Topics/CSS/Transitions/Transitions.css
@@ -3,11 +3,11 @@
     width: 500px;
     background-color: green;
     border: 3px solid red;
-    /* display: flex; */
+    display: flex;
 }
 
 .box {
-    height: 150px;
+    /* height: 150px; */
     width: 150px;
     margin: 20px;
     border: 2px solid orange;
