--- a/All-Topics/CSS/Transitions/Transitions.css
+++ b/All-Topics/CSS/Transitions/Transitions.css
@@ -7,8 +7,8 @@
 }
 
 .box {
-    /* height: 150px; */
-    width: 150px;
+    height: 150px;
+    /* width: 150px; */
     margin: 20px;
     border: 2px solid orange;
     background-color: aqua;
