--- a/All-Topics/CSS/Transitions/Transitions.css
+++ b/All-Topics/CSS/Transitions/Transitions.css
@@ -8,8 +8,8 @@
 
 .box {
     height: 150px;
-    /* width: 150px; */
-    margin: 20px;
+    width: 150px;
+    /* margin: 20px; */
     border: 2px solid orange;
     background-color: aqua;
 
